// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`publish > execute > calls createOrReplace with _revision_lock_pseudo_field_ if there is an already published document 1`] = `
{
  "listen": [],
  "observable": {
    "action": [],
    "fetch": [],
    "getDocuments": [],
    "listen": [],
    "request": [],
  },
  "request": [],
  "transaction": [
    {
      "commit": [
        [
          {
            "tag": "document.publish",
            "visibility": "async",
          },
        ],
      ],
      "create": [],
      "createIfNotExists": [],
      "createOrReplace": [
        [
          {
            "_createdAt": "2021-09-14T22:48:02.303Z",
            "_id": "my-id",
            "_rev": "exampleRev",
            "_type": "example",
            "newValue": "hey",
          },
        ],
      ],
      "delete": [
        [
          "drafts.my-id",
        ],
      ],
      "id": 1,
      "patch": [
        [
          "my-id",
          {
            "ifRevisionID": "exampleRev",
            "unset": [
              "_revision_lock_pseudo_field_",
            ],
          },
        ],
      ],
    },
  ],
}
`;

exports[`publish > execute > removes the \`_updatedAt\` field 1`] = `
{
  "listen": [],
  "observable": {
    "action": [],
    "fetch": [],
    "getDocuments": [],
    "listen": [],
    "request": [],
  },
  "request": [],
  "transaction": [
    {
      "commit": [
        [
          {
            "tag": "document.publish",
            "visibility": "async",
          },
        ],
      ],
      "create": [
        [
          {
            "_createdAt": "2021-09-14T22:48:02.303Z",
            "_id": "my-id",
            "_rev": "exampleRev",
            "_type": "example",
            "newValue": "hey",
          },
        ],
      ],
      "createIfNotExists": [],
      "createOrReplace": [],
      "delete": [
        [
          "drafts.my-id",
        ],
      ],
      "id": 1,
      "patch": [],
    },
  ],
}
`;

exports[`publish > execute > takes in any and strengthens references where _strengthenOnPublish is true 1`] = `
{
  "listen": [],
  "observable": {
    "action": [],
    "fetch": [],
    "getDocuments": [],
    "listen": [],
    "request": [],
  },
  "request": [],
  "transaction": [
    {
      "commit": [
        [
          {
            "tag": "document.publish",
            "visibility": "async",
          },
        ],
      ],
      "create": [
        [
          {
            "_createdAt": "2021-09-14T22:48:02.303Z",
            "_id": "my-id",
            "_rev": "exampleRev",
            "_type": "my-type",
            "inAn": [
              {
                "_key": "my-key",
                "_ref": "my-ref-in-an-",
                "_type": "reference",
              },
              {
                "_key": "my-other-key",
                "_type": "nestedObj",
                "myRef": {
                  "_ref": "my-ref-in-an--nested",
                },
              },
              {
                "_ref": "my-ref-in-an--no-key",
                "_type": "reference",
              },
            ],
            "notToBeStrengthened": {
              "_ref": "my-ref",
              "_type": "reference",
              "_weak": true,
            },
            "simpleRef": {
              "_ref": "my-ref",
              "_type": "reference",
            },
          },
        ],
      ],
      "createIfNotExists": [],
      "createOrReplace": [],
      "delete": [
        [
          "drafts.my-id",
        ],
      ],
      "id": 1,
      "patch": [],
    },
  ],
}
`;
